<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.formcadastro.FormCadastro">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/titulo_form_cadastro"
        android:textStyle="bold"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/round_bg"
        android:padding="15dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:id="@+id/edit_nome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/round_bg"
        android:padding="15dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:id="@+id/edit_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/round_bg"
        android:padding="15dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:id="@+id/edit_senha" />

    <Button
        android:id="@+id/btncadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/purple_500"
        android:padding="10dp"
        android:textSize="20sp" />


</LinearLayout>

</androidx.core.widget.NestedScrollView>