<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.formlogin.FormLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="77dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/green_700"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_700"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/titulo_form_login"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/round_bg"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edit_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/round_bg"
                        android:hint="@string/hint_senha"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtrecuperarsenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="right"
                        android:text="@string/recuperar_senha"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button

                        android:id="@+id/btnentrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="8dp"
                        android:padding="15dp"
                        android:textColor="@color/green_700"
                        app:backgroundTint="@color/white"
                        app:cornerRadius="10dp"
                        android:text="@string/btn_entrar"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_900"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="Não possui uma conta?"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btncadastrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="8dp"
                        app:backgroundTint="@color/white"
                        app:cornerRadius="10dp"
                        android:padding="15dp"
                        android:text="@string/btn_cadastrar"
                        android:textColor="@color/green_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>