<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.planta.FormPlanta">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarapp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/green_700"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/nome_planta"
                app:titleTextColor="@color/white"
                app:navigationIcon="?attr/homeAsUpIndicator"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@color/green_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/reservatorio"
                    android:textColor="@color/green_700"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewReservatorio"
                    app:layout_constraintStart_toStartOf="@+id/imageViewReservatorio"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewReservatorio" />

                <ProgressBar
                    android:id="@+id/progress_bar_umidade"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/imageViewReservatorio"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:progress="60" />

                <TextView
                    android:id="@+id/text_view_progress_umidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_700"
                    app:layout_constraintBottom_toBottomOf="@+id/progress_bar_umidade"
                    app:layout_constraintEnd_toEndOf="@+id/progress_bar_umidade"
                    app:layout_constraintStart_toStartOf="@+id/progress_bar_umidade"
                    app:layout_constraintTop_toTopOf="@+id/progress_bar_umidade"
                    tools:text="60%" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/umidade"
                    android:textColor="@color/green_700"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/progress_bar_umidade"
                    app:layout_constraintStart_toStartOf="@+id/progress_bar_umidade"
                    app:layout_constraintTop_toBottomOf="@+id/progress_bar_umidade" />

                <ImageView
                    android:id="@+id/imageViewReservatorio"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/reservatorio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/progress_bar_umidade"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/water_full"
                    app:tint="@color/water_blue" />

                <TextView
                    android:id="@+id/text_view_progress_reservatorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewReservatorio"
                    app:layout_constraintStart_toStartOf="@+id/imageViewReservatorio"
                    app:layout_constraintTop_toTopOf="@+id/imageViewReservatorio"
                    tools:text="Cheio" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewPlanta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Laurinha"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/textViewTipoPlanta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Peperômia"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlanta" />

            <TextView
                android:id="@+id/textViewDataIrrig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text=""
                android:textColor="@color/green_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:text="Última irrigação: 00/00/0000 00:00:00" />

            <TextView
                android:id="@+id/textViewDataRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text=""
                android:textColor="@color/green_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDataIrrig"
                tools:text="Última irrigação: 00/00/0000 00:00:00" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>